# NPB-Callable

./: CMakeLists.txt  README.md
exec/: main_cg.c  main_ep.c  main_ft.c  main_is.c  main_mg.c
include/: cg.h  ep.h  ft.h  is.h  mg.h  randdp.h  type.h
